--- a/spring4WithSpringBoot/l18_ConfigrationClasses/pom.xml
+++ b/spring4WithSpringBoot/l18_ConfigrationClasses/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.cziaul</groupId>
-	<artifactId>di</artifactId>
+	<artifactId>l18_ConfigrationClasse</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
