--- a/spring4WithSpringBoot/l18_JavaConfigrationNFactoryMethod/.project
+++ b/spring4WithSpringBoot/l18_JavaConfigrationNFactoryMethod/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>dependencyinjection</name>
+	<name>l18_JavaConfigrationNFactoryMethod</name>
 	<comment></comment>
 	<projects>
 	</projects>
