Added Orecle XE

--- a/spring4WithSpringBoot/springmvc/src/main/resources/application.properties
+++ b/spring4WithSpringBoot/springmvc/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.profiles.active=jpa
 
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+spring.datasource.url=jdbc:oracle:thin:hr/hr@localhost:1521/XE
+spring.datasource.username=hr
+spring.datasource.password=hr
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+oracle.username=system
+oracle.password=welcome1
+oracle.url=jdbc:oracle:thin:hr/hr@localhost:1521/XE
+
