L61 JPA Entity Assignment Code Review

--- a/spring4WithSpringBoot/springmvc/src/main/resources/application.properties
+++ b/spring4WithSpringBoot/springmvc/src/main/resources/application.properties
@@ -13,3 +13,4 @@ oracle.username=system
 oracle.password=welcome1
 oracle.url=jdbc:oracle:thin:hr/hr@localhost:1521/XE
 
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultComponentSafeNamingStrategy
